--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.11.0",
+    "nprogress": "^0.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
+    "react-router": "^7.6.3",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "sass": "^1.89.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -47,8 +52,8 @@
     ]
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.3",
     "@types/react-redux": "^7.1.34",
-    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
     "eslint": "^8.56.0",
